Start board rendering

--- a/src/static/tsuro.css
+++ b/src/static/tsuro.css
@@ -1,6 +1,7 @@
 svg
 {
-    border: 1px solid #999999;
-    margin-left: 2px;
-    margin-right: 2px;
+    margin-left: 1px;
+    margin-right: 0px;
+    margin-top: 1px;
+    margin-bottom: 0px;
 }
